experiment: Static musl build (#719)
* chore: split up package-ffi workflows by OS (#724)

* chore: split up package-ffi workflows by OS

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: add back notify android test job

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: revert back to dynamic lib for now

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

---------

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: try to build actual static lib for musl

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: try to fix musl build

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: turn of reqwest default features

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: try to fix cross install issue

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: revert cross install back to GitHub

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: add qemu

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: only install qemu for hosts where we need cross-comp

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: get rid of glibc builds

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: try to update tests to use static lib instead of dynamic lib

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: fix merge conflict

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: static build flag

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: more apk add

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: get go tests working

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

* chore: cap

--- a/.github/workflows/package-ffi-engine-darwin.yml
+++ b/.github/workflows/package-ffi-engine-darwin.yml
@@ -1,4 +1,4 @@
-name: Package FFI Engine (macOS)
+name: Package FFI Engine (Darwin)
 on:
   pull_request:
     branches: [main]
@@ -19,16 +19,16 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - name: Darwin-arm64
+          - name: Darwin-aarch64
             target: aarch64-apple-darwin
 
           - name: Darwin-x86_64
             target: x86_64-apple-darwin
 
-          - name: iOS-arm64
+          - name: iOS-aarch64
             target: aarch64-apple-ios
 
-          - name: iOS-arm64-sim
+          - name: iOS-aarch64-sim
             target: aarch64-apple-ios-sim
 
     runs-on: macos-latest
@@ -39,11 +39,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: ${{ matrix.platform.target }}
-          override: true
+        run: rustup update stable && rustup target add ${{ matrix.platform.target }}
 
       - uses: actions/cache@v4
         with:
@@ -56,10 +52,7 @@ jobs:
           key: macos-${{ matrix.platform.target}}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Build
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: -p flipt-engine-ffi --target ${{ matrix.platform.target }} --release
+        run: cargo build --release --target ${{ matrix.platform.target }} --package flipt-engine-ffi
 
       - name: Strip
         run: strip -x target/${{ matrix.platform.target }}/release/libfliptengine.dylib
