--- a/.github/workflows/package-ffi-engine-linux.yml
+++ b/.github/workflows/package-ffi-engine-linux.yml
@@ -20,28 +20,10 @@ jobs:
       matrix:
         platform:
           - name: Linux-x86_64
-            target: x86_64-unknown-linux-gnu
-            use_cross: false
-
-          - name: Linux-arm64
-            target: aarch64-unknown-linux-gnu
-            use_cross: true
-
-          - name: Linux-x86_64-musl
             target: x86_64-unknown-linux-musl
-            use_cross: true
 
-          - name: Linux-arm64-musl
+          - name: Linux-aarch64
             target: aarch64-unknown-linux-musl
-            use_cross: true
-
-          - name: Android-arm64
-            target: aarch64-linux-android
-            arch: arm64-v8a
-
-          - name: Android-x86_64
-            target: x86_64-linux-android
-            arch: x86_64
 
     runs-on: ubuntu-22.04
     env:
@@ -51,11 +33,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          target: ${{ matrix.platform.target }}
-          override: true
+        run: rustup update stable && rustup target add ${{ matrix.platform.target }}
 
       - uses: actions/cache@v4
         with:
@@ -68,41 +46,15 @@ jobs:
           key: linux-${{ matrix.platform.target}}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Set up QEMU
-        if: matrix.platform.use_cross
         uses: docker/setup-qemu-action@v3
 
       - name: Install cross
-        if: matrix.platform.use_cross
         run: |
           which cross || cargo install cross --git https://github.com/cross-rs/cross
           echo "CROSS_NO_WARNINGS=0" >> $GITHUB_ENV
 
-      - name: Install cargo-ndk
-        if: endsWith(matrix.platform.target, '-android')
-        run: cargo install --force cargo-ndk
-
-      - name: Set RUSTFLAGS (MUSL)
-        if: endsWith(matrix.platform.target, '-musl')
-        run: echo "RUSTFLAGS=-C target-feature=-crt-static" >> $GITHUB_ENV
-
       - name: Build
-        if: ${{ !endsWith(matrix.platform.target, '-android') }}
-        uses: actions-rs/cargo@v1
-        with:
-          command: build
-          args: -p flipt-engine-ffi --target ${{ matrix.platform.target }} --release
-          use-cross: ${{ matrix.platform.use_cross }}
-
-      - name: Build (Android)
-        if: endsWith(matrix.platform.target, '-android')
-        uses: actions-rs/cargo@v1
-        with:
-          command: ndk
-          args: --platform 30 --target ${{ matrix.platform.arch }} build --release
-
-      - name: Strip
-        if: matrix.platform.name == 'Linux-x86_64'
-        run: strip -x target/${{ matrix.platform.target }}/release/libfliptengine.so
+        run: cross build --release --target ${{ matrix.platform.target }} --package flipt-engine-ffi
 
       - name: Package
         run: |
@@ -130,30 +82,4 @@ jobs:
         if: github.event_name == 'workflow_dispatch' && !endswith(github.event.inputs.tag, 'pre')
         with:
           tag_name: flipt-engine-ffi-${{ github.event.inputs.tag }}
-          files: flipt-engine-ffi-${{ matrix.platform.name }}.tar.gz 
-
-  notify:
-    runs-on: ubuntu-latest
-    needs: build
-    env:
-      FLIPT_RELEASE_BOT_APP_ID: ${{ secrets.FLIPT_RELEASE_BOT_APP_ID }}
-      FLIPT_RELEASE_BOT_APP_PEM: ${{ secrets.FLIPT_RELEASE_BOT_APP_PEM }}
-      FLIPT_RELEASE_BOT_INSTALLATION_ID: ${{ secrets.FLIPT_RELEASE_BOT_INSTALLATION_ID }}
-    if: github.repository == 'flipt-io/flipt-client-sdks'
-    steps:
-      - name: Generate token
-        id: generate_token
-        if: env.FLIPT_RELEASE_BOT_APP_ID != '' && env.FLIPT_RELEASE_BOT_APP_PEM != '' && env.FLIPT_RELEASE_BOT_INSTALLATION_ID != ''
-        uses: tibdex/github-app-token@v2
-        with:
-          app_id: ${{ env.FLIPT_RELEASE_BOT_APP_ID }}
-          private_key: ${{ env.FLIPT_RELEASE_BOT_APP_PEM }}
-          installation_id: ${{ env.FLIPT_RELEASE_BOT_INSTALLATION_ID }}
-
-      - name: Trigger Test Android SDK
-        if: steps.generate_token.outputs.token != ''
-        run: |
-          curl -X POST -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/flipt-io/flipt-client-sdks/actions/workflows/test-android-sdk.yml/dispatches \
-            -d '{"ref":"${{ github.head_ref }}", "inputs":{"caller_run_id":"${{ github.run_id }}"}}'
+          files: flipt-engine-ffi-${{ matrix.platform.name }}.tar.gz
