--- a/flipt-client-csharp/src/FliptClient/FliptClient.csproj
+++ b/flipt-client-csharp/src/FliptClient/FliptClient.csproj
@@ -22,33 +22,33 @@
 
   <ItemGroup>
     <Content Include="ext/ffi/windows_x86_64/fliptengine.dll" Condition="Exists('ext/ffi/windows_x86_64/fliptengine.dll')">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <Pack>true</Pack>
-      <PackagePath>runtimes/win-x64/native/fliptengine.dll</PackagePath>
+      <PackagePath>runtimes/win-x64/native</PackagePath>
       <Link>runtimes/win-x64/native/fliptengine.dll</Link>
     </Content>
     <Content Include="ext/ffi/linux_x86_64/libfliptengine.so" Condition="Exists('ext/ffi/linux_x86_64/libfliptengine.so')">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <Pack>true</Pack>
-      <PackagePath>runtimes/linux-x64/native/libfliptengine.so</PackagePath>
+      <PackagePath>runtimes/linux-x64/native</PackagePath>
       <Link>runtimes/linux-x64/native/libfliptengine.so</Link>
     </Content>
-    <Content Include="ext/ffi/linux_arm64/libfliptengine.so" Condition="Exists('ext/ffi/linux_arm64/libfliptengine.so')">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <Content Include="ext/ffi/linux_aarch64/libfliptengine.so" Condition="Exists('ext/ffi/linux_aarch64/libfliptengine.so')">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <Pack>true</Pack>
-      <PackagePath>runtimes/linux-arm64/native/libfliptengine.so</PackagePath>
+      <PackagePath>runtimes/linux-arm64/native</PackagePath>
       <Link>runtimes/linux-arm64/native/libfliptengine.so</Link>
     </Content>
     <Content Include="ext/ffi/darwin_x86_64/libfliptengine.dylib" Condition="Exists('ext/ffi/darwin_x86_64/libfliptengine.dylib')">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <Pack>true</Pack>
-      <PackagePath>runtimes/osx-x64/native/libfliptengine.dylib</PackagePath>
+      <PackagePath>runtimes/osx-x64/native</PackagePath>
       <Link>runtimes/osx-x64/native/libfliptengine.dylib</Link>
     </Content>
-    <Content Include="ext/ffi/darwin_arm64/libfliptengine.dylib" Condition="Exists('ext/ffi/darwin_arm64/libfliptengine.dylib')">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <Content Include="ext/ffi/darwin_aarch64/libfliptengine.dylib" Condition="Exists('ext/ffi/darwin_aarch64/libfliptengine.dylib')">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <Pack>true</Pack>
-      <PackagePath>runtimes/osx-arm64/native/libfliptengine.dylib</PackagePath>
+      <PackagePath>runtimes/osx-arm64/native</PackagePath>
       <Link>runtimes/osx-arm64/native/libfliptengine.dylib</Link>
     </Content>
   </ItemGroup>
