--- a/flipt-engine-ffi/Cargo.toml
+++ b/flipt-engine-ffi/Cargo.toml
@@ -8,16 +8,19 @@ description = "Flipt FFI Client Engine"
 publish = false
 repository = "https://github.com/flipt-io/flipt-client-sdks"
 
+[lib]
+name = "fliptengine"
+crate-type = ["rlib", "dylib", "staticlib"]
+
 [dependencies]
-libc = "0.2.150"
+libc = { version = "0.2.150", features = ["std"] }
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = { version = "1.0.89", features = ["raw_value"] }
-reqwest = { version = "0.12.9", features = ["json", "stream"] }
-tokio = { version = "1.36.0", features = ["full"] }
-tokio-util = { version = "0.7", features = ["io", "codec"] }
-futures-util = "0.3.30"
-native-tls = { version = "0.2", features = ["vendored"] }
-futures = "0.3"
+reqwest = { version = "0.12.9", features = ["json", "stream", "rustls-tls"], default-features = false }
+tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "io-util", "net", "time"], default-features = false }
+tokio-util = { version = "0.7", features = ["io"], default-features = false }
+futures-util = { version = "0.3.30", default-features = false }
+futures = { version = "0.3", default-features = false }
 thiserror = "2.0.3"
 reqwest-retry = "0.7.0"
 reqwest-middleware = "0.4.0"
@@ -28,7 +31,3 @@ path = "../flipt-evaluation"
 [dev-dependencies]
 mockall = "0.13.0"
 mockito = "1.4.0"
-
-[lib]
-name = "fliptengine"
-crate-type = ["rlib", "dylib", "staticlib"]
