--- a/flipt-engine-wasm/Cargo.toml
+++ b/flipt-engine-wasm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "flipt-engine-wasm"
-version = "0.2.2"
+version = "0.0.1"
 edition = "2021"
 authors = ["Flipt Devs <dev@flipt.io>"]
 license = "MIT"
@@ -12,16 +12,11 @@ repository = "https://github.com/flipt-io/flipt-client-sdks"
 crate-type = ["cdylib"]
 
 [dependencies]
-wasm-bindgen = "0.2.92"
+libc = { version = "0.2.150", features = ["std"] }
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = { version = "1.0.89", features = ["raw_value"] }
-serde-wasm-bindgen = "0.6.5"
-uuid = { version = "1.5.0", features = ["v4", "js"] }
-console_error_panic_hook = "0.1.7"
-chrono = { version = "0.4.31", features = ["wasmbind"] }
+uuid = { version = "1.14.0", features = ["v4", "js"] }
+thiserror = "2.0.3"
 
 [dependencies.flipt-evaluation]
 path = "../flipt-evaluation"
-
-[dev-dependencies]
-wasm-bindgen-test = "0.3.42"
