chore: use name for package build script
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-ffi-engine-linux.yml
+++ b/.github/workflows/package-ffi-engine-linux.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Build
         run: |
-          ./flipt-engine-ffi/build.sh ${{ matrix.platform.target }}
+          ./flipt-engine-ffi/build.sh ${{ matrix.platform.name }}
 
       - name: Package
         run: |
