--- a/.github/workflows/package-ffi-engine-android.yml
+++ b/.github/workflows/package-ffi-engine-android.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - name: Android-arm64
+          - name: Android-aarch64
             target: aarch64-linux-android
             arch: arm64-v8a
 
