--- a/.github/workflows/test-swift-sdk.yml
+++ b/.github/workflows/test-swift-sdk.yml
@@ -55,6 +55,14 @@ jobs:
           path: /tmp
           run-id: ${{ inputs.caller_run_id }}
 
+      - name: Download Artifact (Darwin x86_64)
+        uses: actions/download-artifact@v4
+        with:
+          github-token: ${{ steps.generate_token.outputs.token }}
+          name: flipt-engine-ffi-Darwin-x86_64.tar.gz
+          path: /tmp
+          run-id: ${{ inputs.caller_run_id }}
+
       - name: Extract Artifacts
         run: |
           mkdir -p /tmp/flipt-engine-ffi-iOS-aarch64
