--- a/.github/workflows/test-swift-sdk.yml
+++ b/.github/workflows/test-swift-sdk.yml
@@ -79,9 +79,10 @@ jobs:
           mkdir -p flipt-client-swift/Frameworks/iOS/arm64
           mkdir -p flipt-client-swift/Frameworks/iOS/arm64-simulator
           mkdir -p flipt-client-swift/Frameworks/Darwin/arm64
-          mv /tmp/flipt-engine-ffi-iOS-aarch64/target/arm64-apple-ios/release/libfliptengine.a flipt-client-swift/Frameworks/iOS/arm64/
-          mv /tmp/flipt-engine-ffi-iOS-aarch64-sim/target/arm64-apple-ios-simulator/release/libfliptengine.a flipt-client-swift/Frameworks/iOS/arm64-simulator/
+          mv /tmp/flipt-engine-ffi-iOS-aarch64/target/aarch64-apple-ios/release/libfliptengine.a flipt-client-swift/Frameworks/iOS/arm64/
+          mv /tmp/flipt-engine-ffi-iOS-aarch64-sim/target/aarch64-apple-ios-simulator/release/libfliptengine.a flipt-client-swift/Frameworks/iOS/arm64-simulator/
           mv /tmp/flipt-engine-ffi-Darwin-aarch64/target/aarch64-apple-darwin/release/libfliptengine.a flipt-client-swift/Frameworks/Darwin/arm64/
+          mv /tmp/flipt-engine-ffi-Darwin-x86_64/target/x86_64-apple-darwin/release/libfliptengine.a flipt-client-swift/Frameworks/Darwin/x86_64/
           cp flipt-engine-ffi/include/flipt_engine.h flipt-client-swift/Frameworks/include/
           cp flipt-engine-ffi/include/module.modulemap flipt-client-swift/Frameworks/include/
 
@@ -91,6 +92,7 @@ jobs:
             -library "flipt-client-swift/Frameworks/iOS/arm64/libfliptengine.a" -headers "flipt-client-swift/Frameworks/include/" \
             -library "flipt-client-swift/Frameworks/iOS/arm64-simulator/libfliptengine.a" -headers "flipt-client-swift/Frameworks/include/" \
             -library "flipt-client-swift/Frameworks/Darwin/arm64/libfliptengine.a" -headers "flipt-client-swift/Frameworks/include/" \
+            -library "flipt-client-swift/Frameworks/Darwin/x86_64/libfliptengine.a" -headers "flipt-client-swift/Frameworks/include/" \
             -output "flipt-client-swift/Frameworks/FliptEngineFFI.xcframework"
 
       - name: Run Flipt
