--- a/.github/workflows/test-swift-sdk.yml
+++ b/.github/workflows/test-swift-sdk.yml
@@ -55,36 +55,34 @@ jobs:
           path: /tmp
           run-id: ${{ inputs.caller_run_id }}
 
-      - name: Download Artifact (Darwin x86_64)
-        uses: actions/download-artifact@v4
-        with:
-          github-token: ${{ steps.generate_token.outputs.token }}
-          name: flipt-engine-ffi-Darwin-x86_64.tar.gz
-          path: /tmp
-          run-id: ${{ inputs.caller_run_id }}
+      # TODO: Add Darwin x86_64 artifact using lipo
+      # https://developer.apple.com/forums/thread/666335
+      # - name: Download Artifact (Darwin x86_64)
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     github-token: ${{ steps.generate_token.outputs.token }}
+      #     name: flipt-engine-ffi-Darwin-x86_64.tar.gz
+      #     path: /tmp
+      #     run-id: ${{ inputs.caller_run_id }}
 
       - name: Extract Artifacts
         run: |
           mkdir -p /tmp/flipt-engine-ffi-iOS-aarch64
           mkdir -p /tmp/flipt-engine-ffi-iOS-aarch64-sim
           mkdir -p /tmp/flipt-engine-ffi-Darwin-aarch64
-          mkdir -p /tmp/flipt-engine-ffi-Darwin-x86_64
           tar -xzvf /tmp/flipt-engine-ffi-iOS-aarch64.tar.gz -C /tmp/flipt-engine-ffi-iOS-aarch64
           tar -xzvf /tmp/flipt-engine-ffi-iOS-aarch64-sim.tar.gz -C /tmp/flipt-engine-ffi-iOS-aarch64-sim
           tar -xzvf /tmp/flipt-engine-ffi-Darwin-aarch64.tar.gz -C /tmp/flipt-engine-ffi-Darwin-aarch64
-          tar -xzvf /tmp/flipt-engine-ffi-Darwin-x86_64.tar.gz -C /tmp/flipt-engine-ffi-Darwin-x86_64
 
       - name: Move Artifacts
         run: |
           mkdir -p flipt-client-swift/Frameworks/iOS/arm64
           mkdir -p flipt-client-swift/Frameworks/iOS/arm64-simulator
           mkdir -p flipt-client-swift/Frameworks/Darwin/arm64
-          mkdir -p flipt-client-swift/Frameworks/Darwin/x86_64
           mkdir -p flipt-client-swift/Frameworks/include
           mv /tmp/flipt-engine-ffi-iOS-aarch64/target/aarch64-apple-ios/release/libfliptengine.a flipt-client-swift/Frameworks/iOS/arm64/
           mv /tmp/flipt-engine-ffi-iOS-aarch64-sim/target/aarch64-apple-ios-sim/release/libfliptengine.a flipt-client-swift/Frameworks/iOS/arm64-simulator/
           mv /tmp/flipt-engine-ffi-Darwin-aarch64/target/aarch64-apple-darwin/release/libfliptengine.a flipt-client-swift/Frameworks/Darwin/arm64/
-          mv /tmp/flipt-engine-ffi-Darwin-x86_64/target/x86_64-apple-darwin/release/libfliptengine.a flipt-client-swift/Frameworks/Darwin/x86_64/
           cp flipt-engine-ffi/include/flipt_engine.h flipt-client-swift/Frameworks/include/
           cp flipt-engine-ffi/include/module.modulemap flipt-client-swift/Frameworks/include/
 
@@ -94,7 +92,6 @@ jobs:
             -library "flipt-client-swift/Frameworks/iOS/arm64/libfliptengine.a" -headers "flipt-client-swift/Frameworks/include/" \
             -library "flipt-client-swift/Frameworks/iOS/arm64-simulator/libfliptengine.a" -headers "flipt-client-swift/Frameworks/include/" \
             -library "flipt-client-swift/Frameworks/Darwin/arm64/libfliptengine.a" -headers "flipt-client-swift/Frameworks/include/" \
-            -library "flipt-client-swift/Frameworks/Darwin/x86_64/libfliptengine.a" -headers "flipt-client-swift/Frameworks/include/" \
             -output "flipt-client-swift/Frameworks/FliptEngineFFI.xcframework"
 
       - name: Run Flipt
