--- a/.github/workflows/test-swift-sdk.yml
+++ b/.github/workflows/test-swift-sdk.yml
@@ -70,28 +70,25 @@ jobs:
           mkdir -p /tmp/flipt-engine-ffi-iOS-aarch64
           mkdir -p /tmp/flipt-engine-ffi-iOS-aarch64-sim
           mkdir -p /tmp/flipt-engine-ffi-Darwin-aarch64
+
           tar -xzvf /tmp/flipt-engine-ffi-iOS-aarch64.tar.gz -C /tmp/flipt-engine-ffi-iOS-aarch64
           tar -xzvf /tmp/flipt-engine-ffi-iOS-aarch64-sim.tar.gz -C /tmp/flipt-engine-ffi-iOS-aarch64-sim
           tar -xzvf /tmp/flipt-engine-ffi-Darwin-aarch64.tar.gz -C /tmp/flipt-engine-ffi-Darwin-aarch64
 
       - name: Move Artifacts
         run: |
+
           mkdir -p flipt-client-swift/Sources/FliptEngineFFI.xcframework/ios-arm64/Headers
           mkdir -p flipt-client-swift/Sources/FliptEngineFFI.xcframework/ios-arm64-simulator/Headers
           mkdir -p flipt-client-swift/Sources/FliptEngineFFI.xcframework/macos-arm64/Headers
 
-          mv /tmp/flipt-engine-ffi-iOS-aarch64/libfliptengine.a \
-             flipt-client-swift/Sources/FliptEngineFFI.xcframework/ios-arm64/
-          mv /tmp/flipt-engine-ffi-iOS-aarch64-sim/libfliptengine.a \
-             flipt-client-swift/Sources/FliptEngineFFI.xcframework/ios-arm64-simulator/
-          mv /tmp/flipt-engine-ffi-Darwin-aarch64/libfliptengine.a \
-             flipt-client-swift/Sources/FliptEngineFFI.xcframework/macos-arm64/
+          mv /tmp/flipt-engine-ffi-iOS-aarch64/target/aarch64-apple-ios/release/libfliptengine.a flipt-client-swift/Sources/FliptEngineFFI.xcframework/ios-arm64/
+          mv /tmp/flipt-engine-ffi-iOS-aarch64-sim/target/aarch64-apple-ios-sim/release/libfliptengine.a flipt-client-swift/Sources/FliptEngineFFI.xcframework/ios-arm64-simulator/
+          mv /tmp/flipt-engine-ffi-Darwin-aarch64/target/aarch64-apple-darwin/release/libfliptengine.a flipt-client-swift/Sources/FliptEngineFFI.xcframework/macos-arm64/
 
           for platform in ios-arm64 ios-arm64-simulator macos-arm64; do
-            cp flipt-engine-ffi/include/flipt_engine.h \
-               flipt-client-swift/Sources/FliptEngineFFI.xcframework/$platform/Headers/
-            cp flipt-engine-ffi/include/module.modulemap \
-               flipt-client-swift/Sources/FliptEngineFFI.xcframework/$platform/Headers/
+            cp flipt-engine-ffi/include/flipt_engine.h flipt-client-swift/Sources/FliptEngineFFI.xcframework/${platform}/Headers/
+            cp flipt-engine-ffi/include/module.modulemap flipt-client-swift/Sources/FliptEngineFFI.xcframework/${platform}/Headers/
           done
 
       - name: Xcode Build
