--- a/.github/workflows/test-swift-sdk.yml
+++ b/.github/workflows/test-swift-sdk.yml
@@ -77,29 +77,33 @@ jobs:
 
       - name: Move Artifacts
         run: |
+          mkdir -p build/xcframework/ios-arm64/Headers
+          mkdir -p build/xcframework/ios-arm64-simulator/Headers
+          mkdir -p build/xcframework/macos-arm64/Headers
 
-          mkdir -p flipt-client-swift/Sources/FliptEngineFFI.xcframework/ios-arm64/Headers
-          mkdir -p flipt-client-swift/Sources/FliptEngineFFI.xcframework/ios-arm64-simulator/Headers
-          mkdir -p flipt-client-swift/Sources/FliptEngineFFI.xcframework/macos-arm64/Headers
-
-          mv /tmp/flipt-engine-ffi-iOS-aarch64/target/aarch64-apple-ios/release/libfliptengine.a flipt-client-swift/Sources/FliptEngineFFI.xcframework/ios-arm64/
-          mv /tmp/flipt-engine-ffi-iOS-aarch64-sim/target/aarch64-apple-ios-sim/release/libfliptengine.a flipt-client-swift/Sources/FliptEngineFFI.xcframework/ios-arm64-simulator/
-          mv /tmp/flipt-engine-ffi-Darwin-aarch64/target/aarch64-apple-darwin/release/libfliptengine.a flipt-client-swift/Sources/FliptEngineFFI.xcframework/macos-arm64/
+          mv /tmp/flipt-engine-ffi-iOS-aarch64/target/aarch64-apple-ios/release/libfliptengine.a \
+             build/xcframework/ios-arm64/
+          mv /tmp/flipt-engine-ffi-iOS-aarch64-sim/target/aarch64-apple-ios-sim/release/libfliptengine.a \
+             build/xcframework/ios-arm64-simulator/
+          mv /tmp/flipt-engine-ffi-Darwin-aarch64/target/aarch64-apple-darwin/release/libfliptengine.a \
+             build/xcframework/macos-arm64/
 
           for platform in ios-arm64 ios-arm64-simulator macos-arm64; do
-            cp flipt-engine-ffi/include/flipt_engine.h flipt-client-swift/Sources/FliptEngineFFI.xcframework/${platform}/Headers/
-            cp flipt-engine-ffi/include/module.modulemap flipt-client-swift/Sources/FliptEngineFFI.xcframework/${platform}/Headers/
+            cp flipt-engine-ffi/include/flipt_engine.h build/xcframework/${platform}/Headers/
+            cp flipt-engine-ffi/include/module.modulemap build/xcframework/${platform}/Headers/
           done
 
       - name: Xcode Build
         run: |
+          rm -rf flipt-client-swift/Sources/FliptEngineFFI.xcframework
+
           xcodebuild -create-xcframework \
-            -library "flipt-client-swift/Sources/FliptEngineFFI.xcframework/ios-arm64/libfliptengine.a" \
-            -headers "flipt-client-swift/Sources/FliptEngineFFI.xcframework/ios-arm64/Headers" \
-            -library "flipt-client-swift/Sources/FliptEngineFFI.xcframework/ios-arm64-simulator/libfliptengine.a" \
-            -headers "flipt-client-swift/Sources/FliptEngineFFI.xcframework/ios-arm64-simulator/Headers" \
-            -library "flipt-client-swift/Sources/FliptEngineFFI.xcframework/macos-arm64/libfliptengine.a" \
-            -headers "flipt-client-swift/Sources/FliptEngineFFI.xcframework/macos-arm64/Headers" \
+            -library "build/xcframework/ios-arm64/libfliptengine.a" \
+            -headers "build/xcframework/ios-arm64/Headers" \
+            -library "build/xcframework/ios-arm64-simulator/libfliptengine.a" \
+            -headers "build/xcframework/ios-arm64-simulator/Headers" \
+            -library "build/xcframework/macos-arm64/libfliptengine.a" \
+            -headers "build/xcframework/macos-arm64/Headers" \
             -output "flipt-client-swift/Sources/FliptEngineFFI.xcframework"
 
       - name: Run Flipt
