--- a/.github/workflows/test-android-sdk.yml
+++ b/.github/workflows/test-android-sdk.yml
@@ -1,10 +1,8 @@
 name: Test Android SDK
 on:
-  workflow_dispatch:
-    inputs:
-      caller_run_id:
-        type: string
-        required: true
+  workflow_run:
+    workflows: ["Package FFI Engine (Android)"]
+    types: [completed]
 
 permissions:
   contents: write
@@ -14,7 +12,8 @@ jobs:
   test:
     name: Integration Tests
     runs-on: ubuntu-22.04
-    timeout-minutes: 10
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    timeout-minutes: 20
     steps:
       - name: Enable KVM group perms
         run: |
@@ -47,7 +46,7 @@ jobs:
           github-token: ${{ steps.generate_token.outputs.token }}
           name: flipt-engine-ffi-Android-x86_64.tar.gz
           path: /tmp
-          run-id: ${{ inputs.caller_run_id }}
+          run-id: ${{ github.event.workflow_run.id }}
 
       - name: Download Artifact (Android arm64)
         uses: actions/download-artifact@v4
@@ -55,7 +54,7 @@ jobs:
           github-token: ${{ steps.generate_token.outputs.token }}
           name: flipt-engine-ffi-Android-aarch64.tar.gz
           path: /tmp
-          run-id: ${{ inputs.caller_run_id }}
+          run-id: ${{ github.event.workflow_run.id }}
 
       - name: Extract Artifacts
         run: |
