--- a/.github/workflows/test-sdks.yml
+++ b/.github/workflows/test-sdks.yml
@@ -23,6 +23,7 @@ jobs:
 
     name: Integration Tests (${{ matrix.group }})
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     steps:
       - name: Checkout Sources
         uses: actions/checkout@v4
