--- a/.github/workflows/test-swift-sdk.yml
+++ b/.github/workflows/test-swift-sdk.yml
@@ -1,10 +1,8 @@
 name: Test Swift SDK
 on:
-  workflow_dispatch:
-    inputs:
-      caller_run_id:
-        type: string
-        required: true
+  workflow_run:
+    workflows: ["Package FFI Engine (Darwin)"]
+    types: [completed]
 
 permissions:
   contents: write
@@ -14,6 +12,8 @@ jobs:
   test:
     name: Integration Tests
     runs-on: macos-14
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    timeout-minutes: 20
     steps:
       - name: Checkout Sources
         uses: actions/checkout@v4
@@ -37,7 +37,7 @@ jobs:
           github-token: ${{ steps.generate_token.outputs.token }}
           name: flipt-engine-ffi-iOS-aarch64.tar.gz
           path: /tmp
-          run-id: ${{ inputs.caller_run_id }}
+          run-id: ${{ github.event.workflow_run.id }}
 
       - name: Download Artifact (iOS arm64 sim)
         uses: actions/download-artifact@v4
@@ -45,7 +45,7 @@ jobs:
           github-token: ${{ steps.generate_token.outputs.token }}
           name: flipt-engine-ffi-iOS-aarch64-sim.tar.gz
           path: /tmp
-          run-id: ${{ inputs.caller_run_id }}
+          run-id: ${{ github.event.workflow_run.id }}
 
       - name: Download Artifact (Darwin arm64)
         uses: actions/download-artifact@v4
@@ -53,7 +53,7 @@ jobs:
           github-token: ${{ steps.generate_token.outputs.token }}
           name: flipt-engine-ffi-Darwin-aarch64.tar.gz 
           path: /tmp
-          run-id: ${{ inputs.caller_run_id }}
+          run-id: ${{ github.event.workflow_run.id }}
 
       # TODO: Add Darwin x86_64 artifact using lipo
       # https://developer.apple.com/forums/thread/666335
@@ -63,7 +63,7 @@ jobs:
       #     github-token: ${{ steps.generate_token.outputs.token }}
       #     name: flipt-engine-ffi-Darwin-x86_64.tar.gz
       #     path: /tmp
-      #     run-id: ${{ inputs.caller_run_id }}
+      #     run-id: ${{ github.event.workflow_run.id }}
 
       - name: Extract Artifacts
         run: |
