--- a/.github/workflows/package-ffi-engine-linux.yml
+++ b/.github/workflows/package-ffi-engine-linux.yml
@@ -21,11 +21,13 @@ jobs:
         platform:
           - name: Linux-x86_64
             target: x86_64-unknown-linux-musl
+            os: ubuntu-22.04
 
           - name: Linux-aarch64
             target: aarch64-unknown-linux-musl
+            os: ubuntu-22.04-arm
 
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.platform.os }}
     env:
       CARGO_TERM_COLOR: always
 
@@ -33,7 +35,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust
-        run: rustup update stable && rustup target add ${{ matrix.platform.target }}
+        run: rustup update stable
 
       - uses: actions/cache@v4
         with:
@@ -45,16 +47,14 @@ jobs:
             target/
           key: linux-${{ matrix.platform.target}}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Install cross
+      - name: Install musl-gcc
         run: |
-          which cross || cargo install cross --git https://github.com/cross-rs/cross
-          echo "CROSS_NO_WARNINGS=0" >> $GITHUB_ENV
+          sudo apt-get update
+          sudo apt-get install -y build-essential musl-dev musl-tools
 
       - name: Build
-        run: cross build --release --target ${{ matrix.platform.target }} --package flipt-engine-ffi
+        run: |
+          ./flipt-engine-ffi/build.sh ${{ matrix.platform.name }}
 
       - name: Package
         run: |
