--- a/.github/workflows/package-java-sdk.yml
+++ b/.github/workflows/package-java-sdk.yml
@@ -3,7 +3,6 @@ on:
   push:
     tags:
       - "flipt-client-java-**"
-      - "flipt-client-java-musl-**"
 
 permissions:
   contents: write
@@ -20,5 +19,5 @@ jobs:
   build:
     uses: ./.github/workflows/package-ffi-sdks.yml
     with:
-      sdks: ${{ startsWith(github.ref, 'refs/tags/flipt-client-java-musl-') && 'java-musl' || 'java' }}
+      sdks: "java"
     secrets: inherit
