--- a/.github/workflows/test-swift-sdk.yml
+++ b/.github/workflows/test-swift-sdk.yml
@@ -2,13 +2,34 @@ name: Test Swift SDK
 on:
   workflow_run:
     workflows: ["Package FFI Engine (Darwin)"]
-    types: [completed]
+    types: [requested, completed]
 
 permissions:
   contents: write
   id-token: write
+  statuses: write
 
 jobs:
+  set-status:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == null }}
+    steps:
+      - name: Create Pending Status
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const sha = context.payload.workflow_run.head_sha;
+            const { owner, repo } = context.repo;
+            await github.rest.repos.createCommitStatus({
+              owner,
+              repo,
+              sha: sha,
+              state: 'pending',
+              context: 'Swift SDK Tests',
+              description: 'Tests are running...',
+              target_url: '${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
+            });
+
   test:
     name: Integration Tests
     runs-on: macos-14
@@ -129,3 +150,20 @@ jobs:
         run: |
           cd ./flipt-client-swift
           swift test
+
+      - name: Update Status Check
+        if: always()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const sha = context.payload.workflow_run.head_sha;
+            const { owner, repo } = context.repo;
+            await github.rest.repos.createCommitStatus({
+              owner,
+              repo,
+              sha: sha,
+              state: '${{ job.status }}' === 'success' ? 'success' : 'failure',
+              context: 'Swift SDK Tests',
+              description: '${{ job.status }}' === 'success' ? 'Tests passed' : 'Tests failed',
+              target_url: '${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
+            });
