chore: handle dagger secrets better
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/test-engines.yml
+++ b/.github/workflows/test-engines.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust
-        run: rustup update 1.81.0
+        run: rustup update stable
 
       - name: Check Formatting
         run: cargo fmt --all -- --check
