chore: update dependabot to add csharp and wasm
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,80 +10,30 @@ updates:
       # kodiak `merge.automerge_label`
       - "automerge"
 
+  - package-ecosystem: github-actions
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 5
+    labels:
+      - "dependencies"
+      # kodiak `merge.automerge_label`
+      - "automerge"
+
   - package-ecosystem: npm
     directory: "/flipt-client-browser"
     schedule:
-      interval: weekly
+      interval: "weekly"
     open-pull-requests-limit: 5
     labels:
       - "dependencies"
       # kodiak `merge.automerge_label`
       - "automerge"
 
-  - package-ecosystem: npm
-    directory: "/flipt-client-node"
+  - package-ecosystem: nuget
+    directory: "/flipt-client-csharp"
     schedule:
-      interval: weekly
-    open-pull-requests-limit: 5
-    labels:
-      - "dependencies"
-      # kodiak `merge.automerge_label`
-      - "automerge"
-
-  - package-ecosystem: npm
-    directory: "/flipt-client-react"
-    schedule:
-      interval: weekly
-    open-pull-requests-limit: 5
-    labels:
-      - "dependencies"
-      # kodiak `merge.automerge_label`
-      - "automerge"
-
-  - package-ecosystem: pip
-    directory: "/flipt-client-python"
-    schedule:
-      interval: weekly
-    open-pull-requests-limit: 5
-    labels:
-      - "dependencies"
-      # kodiak `merge.automerge_label`
-      - "automerge"
-
-  - package-ecosystem: gomod
-    directory: "/flipt-client-go"
-    schedule:
-      interval: weekly
-    open-pull-requests-limit: 5
-    labels:
-      - "dependencies"
-      # kodiak `merge.automerge_label`
-      - "automerge"
-
-  - package-ecosystem: gradle
-    directory: "/flipt-client-java"
-    schedule:
-      interval: weekly
-    open-pull-requests-limit: 5
-    labels:
-      - "dependencies"
-      # kodiak `merge.automerge_label`
-      - "automerge"
-
-  - package-ecosystem: gradle
-    directory: "/flipt-client-kotlin-android"
-    schedule:
-      interval: weekly
-    open-pull-requests-limit: 5
-    labels:
-      - "dependencies"
-      # kodiak `merge.automerge_label`
-      - "automerge"
-
-  - package-ecosystem: bundler
-    directory: "/flipt-client-ruby"
-    schedule:
-      interval: weekly
+      interval: "weekly"
     open-pull-requests-limit: 5
     labels:
       - "dependencies"
@@ -93,15 +43,75 @@ updates:
   - package-ecosystem: pub
     directory: "/flipt-client-dart"
     schedule:
-      interval: weekly
+      interval: "weekly"
     open-pull-requests-limit: 5
     labels:
       - "dependencies"
       # kodiak `merge.automerge_label`
       - "automerge"
 
-  - package-ecosystem: cargo
-    directory: "/flipt-engine-ffi"
+  - package-ecosystem: gomod
+    directory: "/flipt-client-go"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 5
+    labels:
+      - "dependencies"
+      # kodiak `merge.automerge_label`
+      - "automerge"
+
+  - package-ecosystem: gradle
+    directory: "/flipt-client-java"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 5
+    labels:
+      - "dependencies"
+      # kodiak `merge.automerge_label`
+      - "automerge"
+
+  - package-ecosystem: gradle
+    directory: "/flipt-client-kotlin-android"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 5
+    labels:
+      - "dependencies"
+      # kodiak `merge.automerge_label`
+      - "automerge"
+
+  - package-ecosystem: npm
+    directory: "/flipt-client-node"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 5
+    labels:
+      - "dependencies"
+      # kodiak `merge.automerge_label`
+      - "automerge"
+
+  - package-ecosystem: pip
+    directory: "/flipt-client-python"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 5
+    labels:
+      - "dependencies"
+      # kodiak `merge.automerge_label`
+      - "automerge"
+
+  - package-ecosystem: npm
+    directory: "/flipt-client-react"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 5
+    labels:
+      - "dependencies"
+      # kodiak `merge.automerge_label`
+      - "automerge"
+
+  - package-ecosystem: bundler
+    directory: "/flipt-client-ruby"
     schedule:
       interval: "weekly"
     open-pull-requests-limit: 5
@@ -121,6 +131,16 @@ updates:
       - "automerge"
 
   - package-ecosystem: cargo
+    directory: "/flipt-engine-ffi"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 5
+    labels:
+      - "dependencies"
+      # kodiak `merge.automerge_label`
+      - "automerge"
+
+  - package-ecosystem: cargo
     directory: "/flipt-engine-wasm"
     schedule:
       interval: "weekly"
@@ -130,12 +150,10 @@ updates:
       # kodiak `merge.automerge_label`
       - "automerge"
 
-  - package-ecosystem: github-actions
-    # Workflow files stored in the
-    # default location of `.github/workflows`
-    directory: "/"
+  - package-ecosystem: cargo
+    directory: "/flipt-engine-wasm-js"
     schedule:
-      interval: weekly
+      interval: "weekly"
     open-pull-requests-limit: 5
     labels:
       - "dependencies"
