chore: reduce times we run some actions workflows
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-ffi-engine-darwin.yml
+++ b/.github/workflows/package-ffi-engine-darwin.yml
@@ -2,6 +2,9 @@ name: Package FFI Engine (Darwin)
 on:
   pull_request:
     branches: [main]
+    paths:
+      - "flipt-engine-ffi/**"
+      - "flipt-evaluation/**"
   push:
     tags: ["flipt-engine-ffi-v**"]
   workflow_dispatch:
