--- a/.github/workflows/package-wasm-engine.yml
+++ b/.github/workflows/package-wasm-engine.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust
-        run: rustup update stable && rustup target add wasm32-wasi
+        run: rustup update stable && rustup target add wasm32-wasip1
 
       - uses: actions/cache@v4
         with:
@@ -36,13 +36,13 @@ jobs:
           key: wasm-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Build
-        run: cargo build --release --package flipt-engine-wasm --target wasm32-wasi
+        run: cargo build --release --package flipt-engine-wasm --target wasm32-wasip1
 
       - name: Install wasm-opt
         run: cargo install wasm-opt
 
       - name: Wasm-opt
-        run: wasm-opt --converge --flatten --rereloop -Oz -Oz --gufa -o target/wasm32-wasip1/release/flipt_engine_wasm.wasm target/wasm32-wasi/release/flipt_engine_wasm.wasm
+        run: wasm-opt --converge --flatten --rereloop -Oz -Oz --gufa -o target/wasm32-wasip1/release/flipt_engine_wasm.wasm target/wasm32-wasip1/release/flipt_engine_wasm.wasm
 
       - name: Package
         run: |
