--- a/flipt-client-kotlin-android/build.gradle
+++ b/flipt-client-kotlin-android/build.gradle
@@ -17,16 +17,21 @@ android {
         ndk {
             abiFilters "x86_64", "arm64-v8a"
         }
-        def fliptUrl = System.getenv("FLIPT_URL") ?: ""
-        def fliptAuthToken = System.getenv("FLIPT_AUTH_TOKEN") ?: ""
-        buildConfigField("String", "FLIPT_URL", "\"$fliptUrl\"")
-        buildConfigField("String", "FLIPT_AUTH_TOKEN", "\"$fliptAuthToken\"")
+        versionCode 1
+        versionName "0.0.1-rc.1"
     }
 
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            // Add test-specific build config fields
+            def fliptUrl = System.getenv("FLIPT_URL") ?: ""
+            def fliptAuthToken = System.getenv("FLIPT_AUTH_TOKEN") ?: ""
+            buildConfigField("String", "FLIPT_URL", "\"$fliptUrl\"")
+            buildConfigField("String", "FLIPT_AUTH_TOKEN", "\"$fliptAuthToken\"")
         }
     }
     compileOptions {
